--- a/config/settings.yml
+++ b/config/settings.yml
@@ -4,3 +4,8 @@ max_length: 255
 checked: "1"
 index_ava_size: 50
 index_per_page: 30
+request_per_page: 10
+maximum_content: 140
+dateoff: "dateoff"
+il: "il"
+le: "le"
